# paperml

./: .gitignore  CMakeLists.txt  LICENSE  README.md  helpers.c  helpers.h  linear.c  linear.h  linreg.c  linreg.h  list.c  list.h  plane.c  plane.h  point.c  point.h  test.c  types.h
.github/workflows/: cmake-multi-platform.yml
include/paperml/: knn.h  knndataset.h  linear.h  linreg.h  math_utils.h  nddataset.h  plane.h  point.h  types.h  vector.h
src/: helpers.c  helpers.h  knn.c  knn.h  knndataset.c  knndataset.h  linreg.c  linreg.h  list.c  math_utils.c  math_utils.h  nddataset.c  nddataset.h  plane.c  plane.h  point.c  test.c  vector.c  vector.h
